--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ click==8.1.7
 distro==1.9.0
 exceptiongroup==1.2.0
 Flask==3.0.1
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
 gunicorn==21.2.0
 h11==0.14.0
 httpcore==1.0.2
@@ -23,6 +25,7 @@ pydantic_core==2.14.6
 pytesseract==0.3.10
 python-dotenv==1.0.1
 sniffio==1.3.0
+SQLAlchemy==2.0.25
 tqdm==4.66.1
 typing_extensions==4.9.0
 Werkzeug==3.0.1
