--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ MarkupSafe==2.1.4
 openai==1.9.0
 packaging==23.2
 pillow==10.2.0
+psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic_core==2.14.6
 pytesseract==0.3.10
