--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.6.0
 anyio==4.2.0
 blinker==1.7.0
+boto3==1.34.34
+botocore==1.34.34
 certifi==2023.11.17
 click==8.1.7
 distro==1.9.0
@@ -16,6 +18,7 @@ idna==3.6
 importlib-metadata==7.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
+jmespath==1.0.1
 MarkupSafe==2.1.4
 openai==1.9.0
 packaging==23.2
@@ -24,10 +27,14 @@ psycopg2-binary==2.9.9
 pydantic==2.5.3
 pydantic_core==2.14.6
 pytesseract==0.3.10
+python-dateutil==2.8.2
 python-dotenv==1.0.1
+s3transfer==0.10.0
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.25
 tqdm==4.66.1
 typing_extensions==4.9.0
+urllib3==2.0.7
 Werkzeug==3.0.1
 zipp==3.17.0
