--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,9 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 jmespath==1.0.1
 MarkupSafe==2.1.4
+numpy==1.26.3
 openai==1.9.0
+opencv-python==4.9.0.80
 packaging==23.2
 pillow==10.2.0
 psycopg2-binary==2.9.9
