--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 annotated-types==0.6.0
 anyio==4.2.0
+asttokens==2.4.1
 blinker==1.7.0
 boto3==1.34.34
 botocore==1.34.34
 certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
+decorator==5.1.1
 distro==1.9.0
+elevenlabs==0.2.27
 exceptiongroup==1.2.0
+executing==2.0.1
 Flask==3.0.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
@@ -16,28 +21,41 @@ httpcore==1.0.2
 httpx==0.26.0
 idna==3.6
 importlib-metadata==7.0.1
+ipython==8.21.0
 itsdangerous==2.1.2
+jedi==0.19.1
 Jinja2==3.1.3
 jmespath==1.0.1
 MarkupSafe==2.1.4
+matplotlib-inline==0.1.6
 numpy==1.24.4
 openai==1.9.0
 opencv-python-headless==4.9.0.80
 packaging==23.2
+parso==0.8.3
+pexpect==4.9.0
 pillow==10.2.0
+prompt-toolkit==3.0.43
 psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pydantic==2.5.3
 pydantic_core==2.14.6
+Pygments==2.17.2
 pytesseract==0.3.10
 python-dateutil==2.8.2
 python-dotenv==1.0.1
+requests==2.31.0
 s3transfer==0.10.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.25
+stack-data==0.6.3
 tqdm==4.66.1
+traitlets==5.14.1
 typing_extensions==4.9.0
 urllib3==1.26.18
+wcwidth==0.2.13
+websockets==12.0
 Werkzeug==3.0.1
 zipp==3.17.0
-requests~=2.31.0
