--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ httpcore==1.0.2
 httpx==0.26.0
 idna==3.6
 importlib-metadata==7.0.1
+ipython==8.21.0
 itsdangerous==2.1.2
 jedi==0.19.1
 Jinja2==3.1.3
