--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
+aiohttp==3.9.3
+aiosignal==1.3.1
 annotated-types==0.6.0
 anyio==4.2.0
 asttokens==2.4.1
+attrs==23.2.0
+Authlib==1.3.0
 bidict==0.23.0
 blinker==1.7.0
 boto3==1.34.34
 botocore==1.34.34
 certifi==2023.11.17
+cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
+cryptography==42.0.3
 decorator==5.1.1
 distro==1.9.0
 elevenlabs==0.2.27
 exceptiongroup==1.2.0
 executing==2.0.1
 Flask==3.0.1
+Flask-JWT-Extended==4.6.0
 Flask-SocketIO==5.3.6
 Flask-SQLAlchemy==3.1.1
+frozenlist==1.4.1
 greenlet==3.0.3
 gunicorn==21.2.0
 h11==0.14.0
@@ -30,6 +38,7 @@ Jinja2==3.1.3
 jmespath==1.0.1
 MarkupSafe==2.1.4
 matplotlib-inline==0.1.6
+multidict==6.0.5
 numpy==1.24.4
 openai==1.9.0
 packaging==23.2
@@ -40,9 +49,11 @@ prompt-toolkit==3.0.43
 psycopg2-binary==2.9.9
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pycparser==2.21
 pydantic==2.5.3
 pydantic_core==2.14.6
 Pygments==2.17.2
+PyJWT==2.8.0
 python-dateutil==2.8.2
 python-dotenv==1.0.1
 python-engineio==4.9.0
@@ -62,4 +73,5 @@ wcwidth==0.2.13
 websockets==12.0
 Werkzeug==3.0.1
 wsproto==1.2.0
+yarl==1.9.4
 zipp==3.17.0
